--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	<title>Application Pansements</title>
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" href="./css/themes/default/jquery.mobile-1.4.5.min.css">
-	<link rel="stylesheet" href="./_assets/css/jqm-demos.css">
+	<link rel="stylesheet" href="./assets/css/jqm-demos.css">
     <link rel="stylesheet" href="./css/css.css">
 	<script src="./js/jquery.js"></script>
-	<script src="./_assets/js/index.js"></script>
+	<script src="./assets/js/index.js"></script>
 	<script src="./js/jquery.mobile-1.4.5.min.js"></script>
 	<icon src="logo.png" />
 </head>
@@ -17,7 +17,7 @@
 <div data-role="page" class="jqm-demos jqm-home">
 
 	<div data-role="header" class="jqm-header">
-		<h2><img src="./_assets/img/st-joseph-logo.jpg" alt="jQuery Mobile"></h2>
+		<h2><img src="./assets/img/st-joseph-logo.jpg" alt="jQuery Mobile"></h2>
 		<p>Version <span class="jqm-version"></span></p>
 		<!--<a href="#" class="jqm-navmenu-link ui-btn ui-btn-icon-notext ui-corner-all ui-icon-bars ui-nodisc-icon ui-alt-icon ui-btn-left">Menu</a>-->
 		<a href="#" class="jqm-search-link ui-btn ui-btn-icon-notext ui-corner-all ui-icon-search ui-nodisc-icon ui-alt-icon ui-btn-right">Search</a>
@@ -30,7 +30,7 @@
 
 		<p><strong>jQuery Mobile is a touch-optimized HTML5 UI framework designed to make responsive web sites and apps that are accessible on all smartphone, tablet and desktop devices.</strong></p>
 
-		<img src="./_assets/img/devices.png">
+		<img src="./assets/img/devices.png">
 
 		<p>New to jQuery Mobile? Get started by reading this <a href="intro/" data-transition="flip">introduction</a>. For technical info, visit the <a href="http://api.jquerymobile.com" title="jQuery Mobile API documentation" target="_blank">API documentation</a>. Downloads and info about the project can be found on <a href="http://jquerymobile.com" title="jQuery Mobile web site" target="_blank">jquerymobile.com</a>.</p>-->
 
@@ -42,28 +42,28 @@
 					<ul data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
 						<li class=" ui-li-has-thumb ui-first-child">
 							<a href="navigation/" data-transition="flip">
-								<img src="./_assets/img/noir.png">
+								<img src="./assets/img/noir.png">
 								<h3>Noir</h3>
 								<p>Ulcère nécrotique</p>
 							</a>
 						</li>
 						<li class="ui-li-has-thumb">
 							<a href="navigation/" data-transition="flip">
-								<img src="./_assets/img/jaune.png">
+								<img src="./assets/img/jaune.png">
 								<h3>Jaune</h3>
 								<p>Ulcère fibrineux</p>
 							</a>
 						</li>
 						<li class="ui-li-has-thumb ui-last-child">
 							<a href="navigation/" data-transition="flip">
-								<img src="./_assets/img/rouge.png">
+								<img src="./assets/img/rouge.png">
 								<h3>Rouge</h3>
 								<p>Ulcère bourgeonnant</p>
 							</a>
 						</li>
 						<li class="ui-li-has-thumb ui-last-child">
 							<a href="navigation/" data-transition="flip">
-								<img src="./_assets/img/rose.png">
+								<img src="./assets/img/rose.png">
 								<h3>Rose</h3>
 								<p>Ulcère épidermisé</p>
 							</a>
@@ -80,28 +80,28 @@
 					<ul data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
 						<li class=" ui-li-has-thumb ui-first-child">
 							<a href="navigation/" data-transition="flip">
-								<img src="./_assets/img/hydrogel.png">
+								<img src="./assets/img/hydrogel.png">
 								<h3>Les hydrogels</h3>
 								<p>Les hydrogels</p>
 							</a>
 						</li>
 						<li class="ui-li-has-thumb">
 							<a href="navigation/" data-transition="flip">
-								<img src="./_assets/img/interfacetulle.png">
+								<img src="./assets/img/interfacetulle.png">
 								<h3>Les tulles et interfaces</h3>
 								<p>Les tulles et interfaces</p>
 							</a>
 						</li>
 						<li class="ui-li-has-thumb ui-last-child">
 							<a href="navigation/" data-transition="flip">
-								<img src="./_assets/img/hydrocolloides.png">
+								<img src="./assets/img/hydrocolloides.png">
 								<h3>Les hydrocolloïdes</h3>
 								<p>Les hydrocolloïdes et les hydrocellulaires</p>
 							</a>
 						</li>
 						<li class="ui-li-has-thumb ui-last-child">
 							<a href="navigation/" data-transition="flip">
-								<img src="./_assets/img/algisites.png">
+								<img src="./assets/img/algisites.png">
 								<h3>Les alginates</h3>
 								<p>Les alginates, les pansemants au charbon et les argentiques</p>
 							</a>
