--- a/navigation/index.html
+++ b/navigation/index.html
@@ -11,7 +11,7 @@
 	<script src="../js/jquery.js"></script>
 	<script src="../assets/js/index.js"></script>
 	<script src="../js/jquery.mobile-1.4.5.min.js"></script>
-  <script type="text/javascript" src="./demo.js"></script>
+  <script type="text/javascript" src="demo.js"></script>
 </head>
 <body>
 <div data-role="page" class="jqm-demos" data-quicklinks="true">
